fix alignment issues in flex containers (#187)

--- a/packages/browser-wallet/src/popup/pages/Account/SendCcd/SendCcd.scss
+++ b/packages/browser-wallet/src/popup/pages/Account/SendCcd/SendCcd.scss
@@ -93,6 +93,7 @@ $error-spacing: rem(13.286px);
     &__token-display {
         height: rem(20px);
         width: rem(30px);
+        flex: 0 0 rem(30px);
         margin-right: rem(5px);
         object-fit: contain;
     }
